<resources>

    <string-array name="days">
        <item>@string/Su</item>
        <item>@string/Mo</item>
        <item>@string/Tu</item>
        <item>@string/We</item>
        <item>@string/Th</item>
        <item>@string/Fr</item>
        <item>@string/Sa</item>
    </string-array>


    <string name="app_name">InveritaSoft-Goal-Tracker</string>
    <string name="menu_add">menu add</string>
    <string name="menu_edit">menu edit</string>
    <string name="menu_remind">menu remind</string>
    <string name="menu_note">menu note</string>
    <string name="menu_range">Range</string>
    <string name="menu_weekly">menu weekly</string>
    <string name="menu_export">Export</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_lock">Lock</string>
    <string name="add_note">Add Note</string>
    <string name="comment">Comment:</string>
    <string name="cancel">cancel</string>
    <string name="set">set</string>
    <string name="delete">delete</string>
    <string name="write_note">Write a note for</string>
    <string name="title_activity_create_habbit">CreateHabbitActivity</string>
    <string name="menu_save">SAVE</string>
    <string name="menu_cancel">CANCEL</string>
    <string name="demo">demo</string>
    <string name="give_name">Give this habit  a name</string>
    <string name="give_reasons">Reasons</string>
    <string name="give_description">Give it a description (optinal)</string>
    <string name="habit">Habit</string>
    <string name="description">Description</string>
    <string name="reason">Reason</string>
    <string name="ok">ok</string>


    <string name="Su">Su</string>
    <string name="Mo">Mo</string>
    <string name="Tu">Tu</string>
    <string name="We">We</string>
    <string name="Th">Th</string>
    <string name="Fr">Fr</string>
    <string name="Sa">Sa</string>
    <string name="tag">tag</string>

</resources>
