<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/action_bar_icons_add"
        android:title="@string/menu_add"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/action_bar_icons_edit"
        android:title="@string/menu_edit"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_remind"
        android:icon="@drawable/action_bar_icons_remind"
        android:title="@string/menu_remind"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_note"
        android:icon="@drawable/action_bar_icons_note"
        android:title="@string/menu_note"
        app:showAsAction="always"/>



    <item
        android:id="@+id/menu_range"
        android:icon="@drawable/action_bar_range"
        android:title="@string/menu_range"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_weekly"
        android:icon="@drawable/action_bar_weekly"
        android:title="@string/menu_weekly"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_export"
        android:title="@string/menu_export"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_lock"
        android:title="@string/menu_lock"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_sync"
        android:title="@string/menu_sync"
        app:showAsAction="never"/>

</menu>
