<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:padding="16dp">


   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:textColor="@color/green"
       android:text="@string/add_note"
       android:textSize="@dimen/text_size_title"/>

   <TextView
       android:id="@+id/dateSubtitleText"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" />

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/comment"/>

   <EditText
       android:id="@+id/commentEdit"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="48dp"
       android:weightSum="3"
       android:orientation="horizontal">

      <TextView
          android:id="@+id/cancel"
          android:layout_weight="1"
          android:layout_gravity="center_vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textAllCaps="true"
          android:text="@string/cancel"
          android:gravity="center"
          android:textSize="@dimen/text_size_button"/>

      <TextView
          android:id="@+id/delete"
          android:layout_weight="1"
          android:layout_gravity="center_vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textAllCaps="true"
          android:text="@string/delete"
          android:gravity="center"
          android:textSize="@dimen/text_size_button"/>

      <TextView
          android:id="@+id/set"
          android:layout_weight="1"
          android:layout_gravity="center_vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textAllCaps="true"
          android:text="@string/set"
          android:gravity="center"
          android:textSize="@dimen/text_size_button"/>

   </LinearLayout>


</LinearLayout>