<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        android:layout_gravity="center"
        android:textSize="@dimen/text_size_title"/>


    <LinearLayout
        android:paddingTop="@dimen/padding_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:weightSum="7"
        android:orientation="horizontal"
        android:baselineAligned = "false">


        <LinearLayout
            android:paddingTop="@dimen/padding_top"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Su"
                android:layout_gravity="center" />

            <CheckBox
                android:tag="@string/tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="true"
                android:clickable="false"
                />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="@dimen/padding_top"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Mo"
                android:layout_gravity="center" />
            <CheckBox
                android:tag="@string/tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="true"
                android:clickable="false"
                />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="@dimen/padding_top"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tu"
                android:layout_gravity="center" />

            <CheckBox
                android:tag="@string/tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="true"
                android:clickable="false"
                />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="@dimen/padding_top"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/We"
                android:layout_gravity="center" />

            <CheckBox
                android:tag="@string/tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="true"
                android:clickable="false"
                />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="@dimen/padding_top"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Th"
                android:layout_gravity="center" />
            <CheckBox
                android:tag="@string/tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="true"
                android:clickable="false"
                />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="@dimen/padding_top"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Fr"
                android:layout_gravity="center" />
            <CheckBox
                android:tag="@string/tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="true"
                android:clickable="false"
                />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="@dimen/padding_top"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sa"
                android:layout_gravity="center" />
            <CheckBox
                android:tag="@string/tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="true"
                android:clickable="false"
                />
        </LinearLayout>



    </LinearLayout>

</LinearLayout>